--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -174,7 +174,7 @@ queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛ
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n🎄 <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "<b><blockquote>➥ 𝗝ąñı ση sᴛʀєᴧϻɪηɢ ⏤͟͞●</blockquote></b>\n\n<b><blockquote>❍ ᴛɪᴛʟє ➥</b> <a href={0}>{1}</a> \n<b>❍ ᴛɪϻє ➥</b> {2} ϻɪηυᴛєs \n<b>❍ ʙʏ ➥</b> {3}<b></blockquote>\n<b><blockquote>❖ ϻᴧᴅє ʙʏ ➛ [𓆰꯭꯭♔꯭꯭ 𝗝꯭ᴀ꯭፝֟͠ɴ꯭ɪ꯭꯭⎯꯭꯭ꨄ꯭꯭ ⃪꯭꯭꯭꯭꯭꯭➛꯭💌꯭꯭](http://t.me/RAM_HACKER_RP)</b></blockquote>"
+stream_1 : "<b><blockquote>➥ 𝗝ąñı ση sᴛʀєᴧϻɪηɢ ⏤͟͞●</blockquote></b>\n\n<b><blockquote>❍ ᴛɪᴛʟє ➥</b> <a href={0}>{1}</a> \n<b>❍ ᴛɪϻє ➥</b> {2} ϻɪηυᴛєs \n<b>❍ ʙʏ ➥</b> {3}<b></blockquote>\n<b><blockquote>❤️‍🔥ϻᴧᴅє ʙʏ➛ [𓆰꯭꯭♔꯭꯭𝐕ɪ֟፝‌꯭ᴘ꯭ 𝗝꯭ᴀ꯭፝֟͠ɴ꯭ɪ꯭꯭⎯꯭꯭ꨄ](http://t.me/RAM_HACKER_RP)</b></blockquote>"
 stream_2 : "<b><blockquote>➥ 𝗝ąñı ση sᴛʀєᴧϻɪηɢ ⏤͟͞●</blockquote></b>\n\n<b><blockquote>❍ sᴛʀєᴧϻ ᴛʏᴘє ➥</b> ʟɪᴠєsᴛʀєᴧϻ [ υʀʟ ]\n<b>❍ ʙʏ ➥</b> {0}</blockquote>"
 
 
@@ -367,7 +367,7 @@ C_B_H_14 : "Dᴇʟᴇᴛɪɴɢ ᴀʟʟ ᴄʟᴏɴᴇᴅ ʙᴏᴛs..."
 C_B_H_15 : "Aʟʟ ᴄʟᴏɴᴇᴅ ʙᴏᴛs ʜᴀᴠᴇ ʙᴇᴇɴ ᴅᴇʟᴇᴛᴇᴅ sᴜᴄᴄᴇssғᴜʟʟʏ."
 C_B_H_16 : "Yᴏᴜ ʜᴀᴠᴇɴ'ᴛ ᴄʟᴏɴᴇᴅ ᴀɴʏ ʙᴏᴛs ʏᴇᴛ."
 
-c_start_2 : "**✦ ʜᴇʏ, {0}**\n**✦ ɪ'ᴍ {1},**\n\n**● ᴀ ᴄʟᴏɴᴇᴅ ʙᴏᴛ ᴏғ [˹ᴊ𐓘ɴɪ ✘ ᴧꜱꜱɪꜱᴛᴧɴᴛ˼♪ [ᖇ♡ᑭ]]({3}) !!**\n**✦ ɪғ ʏᴏᴜ ᴡᴀɴᴛ ᴍᴀᴋᴇ ʏᴏᴜʀ ᴏᴡɴ ʙᴏᴛ, ᴠɪsɪᴛ [˹ᴊ𐓘ɴɪ ✘ ᴧꜱꜱɪꜱᴛᴧɴᴛ˼♪ [ᖇ♡ᑭ]]({5}) ᴀɴᴅ ᴛʏᴘᴇ /clone ᴄᴏᴍᴍᴀɴᴅ !!**\n\n**๏ ᴛᴀᴘ ᴛᴏ ʜᴇʟᴩ ᴀɴᴅ ᴄʜᴇᴀᴋ ᴍʏ ᴄᴏᴍᴍᴀɴᴅs.**\n**⚘ ᴍᴏʀᴇ ᴅᴇᴛᴀɪʟs ᴅᴍ - [𓆰꯭꯭♔꯭꯭ 𝗝꯭ᴀ꯭፝֟͠ɴ꯭ɪ꯭꯭⎯꯭꯭ꨄ꯭꯭ ⃪꯭꯭꯭꯭꯭꯭➛꯭💌꯭꯭](http://t.me/RAM_HACKER_RP) !!**"
+c_start_2 : "**✦ ʜᴇʏ, {0}**\n**✦ ɪ'ᴍ {1},**\n\n**● ᴀ ᴄʟᴏɴᴇᴅ ʙᴏᴛ ᴏғ [˹ᴊ𐓘ɴɪ ✘ ᴧꜱꜱɪꜱᴛᴧɴᴛ˼♪ [ᖇ♡ᑭ]]({3}) !!**\n**✦ ɪғ ʏᴏᴜ ᴡᴀɴᴛ ᴍᴀᴋᴇ ʏᴏᴜʀ ᴏᴡɴ ʙᴏᴛ, ᴠɪsɪᴛ [˹ᴊ𐓘ɴɪ ✘ ᴧꜱꜱɪꜱᴛᴧɴᴛ˼♪ [ᖇ♡ᑭ]]({5}) ᴀɴᴅ ᴛʏᴘᴇ /clone ᴄᴏᴍᴍᴀɴᴅ !!**\n\n**๏ ᴛᴀᴘ ᴛᴏ ʜᴇʟᴩ ᴀɴᴅ ᴄʜᴇᴀᴋ ᴍʏ ᴄᴏᴍᴍᴀɴᴅs.**\n**⚘ ᴍᴏʀᴇ ᴅᴇᴛᴀɪʟs ᴅᴍ - [𓆰꯭꯭♔꯭꯭𝐕ɪ֟፝‌꯭ᴘ꯭ 𝗝꯭ᴀ꯭፝֟͠ɴ꯭ɪ꯭꯭⎯꯭꯭ꨄ](http://t.me/RAM_HACKER_RP) !!**"
 
 c_brod_1 : "» Yᴏᴜʀ ʙᴏᴛ ɴᴇᴇᴅs ᴀ ᴘʀᴇᴍɪᴜᴍ sᴜʙsᴄʀɪᴘᴛɪᴏɴ ᴛᴏ ᴜsᴇ `/broadcast`\n\n Jᴏɪɴ [Jani Music]({0}) ᴏʀ DM @RAM_HACKER_RP ғᴏʀ ᴍᴏʀᴇ ᴅᴇᴛᴀɪʟs ᴀɴᴅ ɢᴇᴛ sᴛᴀʀᴛᴇᴅ !"
 
