--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -85,7 +85,7 @@ admin_39 : "» ʀᴇᴍᴏᴠᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
 admin_40 : "ᴜᴘᴠᴏᴛᴇᴅ."
 
 start_1 : "{0}❍ ɪs ᴀʟɪᴠᴇ ●\n\n<b>❍ ᴜᴘᴛɪᴍᴇ :</b> {1}●"
-start_2 : "**❖ ʜᴇʏ, {0}**\n**✦ ɪ'ᴍ {1},**\n\n**⚘ ᴀ ғᴀsᴛ ᴀɴᴅ ᴘᴏᴡᴇʀғᴜʟʟ ᴍᴜsɪᴄ ᴘʟᴀʏᴇʀ\n  ʙᴏᴛ ᴡɪᴛʜ /clone ғᴇᴀᴛᴜʀᴇs.**\n**┏━━━━━━━━━━━━━━━⧫**\n**┠ ● ᴘʏᴛʜᴏɴ ➥** `3.10.11`\n**┠ ● ᴘʏʀᴏɢʀᴀᴍ ➥** `2.0.106`\n**┠ ● ᴘʏ-ᴛɢᴄᴀʟʟs ➥** `0.9.7`\n**┗━━━━━━━━━━━━━━━⧫**\n**✦ 𝐓ᴀᴘ ᴛᴏ ʜᴇʟᴩ ᴀɴᴅ ᴄʜᴇᴀᴋ ᴍʏ ᴄᴏᴍᴍᴀɴᴅs.**\n**✦ 𝐏ᴏᴡᴇʀᴇᴅ 𝖡ʏ :- [𓆰꯭꯭♔꯭꯭ 𝗝꯭ᴀ꯭፝֟͠ɴ꯭ɪ꯭꯭⎯꯭꯭ꨄ꯭꯭ ⃪꯭꯭꯭꯭꯭꯭➛꯭💌꯭꯭](http://t.me/RAM_HACKER_RP)**"
+start_2 : "**❖ ʜᴇʏ, {0}**\n**✦ ɪ'ᴍ {1},**\n\n**⚘ ᴀ ғᴀsᴛ ᴀɴᴅ ᴘᴏᴡᴇʀғᴜʟʟ ᴍᴜsɪᴄ ᴘʟᴀʏᴇʀ\n  ʙᴏᴛ ᴡɪᴛʜ /clone ғᴇᴀᴛᴜʀᴇs.**\n**┏━━━━━━━━━━━━━━━⧫**\n**┠ ● ᴘʏᴛʜᴏɴ ➥** `3.10.11`\n**┠ ● ᴘʏʀᴏɢʀᴀᴍ ➥** `2.0.106`\n**┠ ● ᴘʏ-ᴛɢᴄᴀʟʟs ➥** `0.9.7`\n**┗━━━━━━━━━━━━━━━⧫**\n**✦ 𝐓ᴀᴘ ᴛᴏ ʜᴇʟᴩ ᴀɴᴅ ᴄʜᴇᴀᴋ ᴍʏ ᴄᴏᴍᴍᴀɴᴅs.**\n**✦ 𝐏ᴏᴡᴇʀᴇᴅ 𝖡ʏ :- [𓆰꯭꯭♔꯭꯭𝐕ɪ֟፝‌꯭ᴘ꯭ 𝗝꯭ᴀ꯭፝֟͠ɴ꯭ɪ꯭꯭](http://t.me/RAM_HACKER_RP)**"
 start_3 : "ʜᴇʏ {0},\nᴛʜɪs ɪs {1}\n\nᴛʜᴀɴᴋs ғᴏʀ ᴀᴅᴅɪɴɢ ᴍᴇ ɪɴ {2}, {3} ᴄᴀɴ ɴᴏᴡ ᴩʟᴀʏ sᴏɴɢs ɪɴ ᴛʜɪs ᴄʜᴀᴛ."
 start_4 : "❍ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ ɴᴇᴇᴅᴇᴅ</b> ❍\n\nᴘʟᴇᴀsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏᴜʀ <b>ɢʀᴏᴜᴘ</b> ᴛᴏ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ</b> ᴀɴᴅ ᴛʜᴇɴ ᴀᴅᴅ ᴍᴇ ᴀɢᴀɪɴ.\n\n<b>ʜᴏᴡ ᴛᴏ ᴍᴀᴋᴇ sᴜᴘᴇʀɢʀᴏᴜᴘ ?</b>\n- ᴍᴀᴋᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ's ᴄʜᴀᴛ ʜɪsᴛᴏʀʏ <b>ᴠɪsɪʙʟᴇ</b> ᴏɴᴄᴇ."
 start_5 : "<b>↝ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴄʜᴀᴛ ↜</b>\n\nᴛʜɪs ᴄʜᴀᴛ ɪs ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴏɴ {0} ᴅᴀᴛᴀʙᴀsᴇ.\nʀᴇǫᴜᴇsᴛ ᴀ <a href={1}>sᴜᴅᴏ ᴜsᴇʀ</a> ᴛᴏ ᴜɴʙʟᴀᴄᴋʟɪsᴛ ʏᴏᴜʀ ᴄʜᴀᴛ ᴏʀ ᴠɪsɪᴛ <a href={2}>sᴜᴘᴘᴏʀᴛ ᴄʜᴀᴛ.</a>"
@@ -135,7 +135,7 @@ cplay_5 : "ᴏɴʟʏ ᴄʜᴀɴɴᴇʟs ᴀʀᴇ sᴜᴘᴘᴏʀᴛᴇᴅ."
 cplay_6 : "» ʏᴏᴜ ɴᴇᴇᴅ ᴛᴏ ʙᴇ ᴛʜᴇ <b>ᴏᴡɴᴇʀ</b> ᴏғ ᴛʜᴇ ᴄʜᴀɴɴᴇʟ {0} ᴛᴏ ᴄᴏɴɴᴇᴄᴛ ɪᴛ ᴡɪᴛʜ ᴛʜɪs ɢʀᴏᴜᴘ.\n<b>ᴄʜᴀɴɴᴇʟ's ᴏᴡɴᴇʀ :</b> @{1}\n\nᴀʟᴛᴇʀɴᴀᴛɪᴠᴇʟʏ ʏᴏᴜ ᴄᴀɴ ʟɪɴᴋ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴛᴏ ᴛʜᴀᴛ ᴄʜᴀɴɴᴇʟ ᴀɴᴅ ᴛʜᴇɴ ᴛʀʏ ᴄᴏɴɴɴᴇᴄᴛɪɴɢ ᴡɪᴛʜ <code>/channelplay linked</code>"
 cplay_7 : "» ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴅɪsᴀʙʟᴇᴅ."
 
-play_1 : "❤️‍🔥 𝐖αιτ 𝐁αϐγ..."
+play_1 : "❤️‍🔥 𝐖αιτ 𝐁αϐγ...😘"
 play_2 : "<b>➻ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴍᴏᴅᴇ</b>\n\nᴘʀᴏᴄᴇssɪɴɢ, ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...\n\n<b>ʟɪɴᴋᴇᴅ ᴄʜᴀɴɴᴇʟ :</b> {0}"
 play_3 : "» ғᴀɪʟᴇᴅ ᴛᴏ ᴘʀᴏᴄᴇss ǫᴜᴇʀʏ."
 play_4 : "<b>ᴀᴅᴍɪɴs ᴏɴʟʏ ᴘʟᴀʏ</b>\nᴏɴʟʏ ᴀᴅᴍɪɴs ᴏғ ᴛʜɪs ᴄʜᴀᴛ ᴀʀᴇ ᴀʟʟᴏᴡᴇᴅ ᴛᴏ ᴘʟᴀʏ\n\nᴄʜᴀɴɢᴇ ᴘʟᴀʏ ᴍᴏᴅᴇ ᴠɪᴀ /playmode"
@@ -174,7 +174,7 @@ queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛ
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n🎄 <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "<b><blockquote>➥ 𝗝ąñı ση sᴛʀєᴧϻɪηɢ ⏤͟͞●</blockquote></b>\n\n<b><blockquote>❍ ᴛɪᴛʟє ➥</b> <a href={0}>{1}</a> \n<b>❍ ᴛɪϻє ➥</b> {2} ϻɪηυᴛєs \n<b>❍ ʙʏ ➥</b> {3}<b></blockquote>\n<b><blockquote>❤️‍🔥ϻᴧᴅє ʙʏ➛ [𓆰꯭꯭♔꯭꯭𝐕ɪ֟፝‌꯭ᴘ꯭ 𝗝꯭ᴀ꯭፝֟͠ɴ꯭ɪ꯭꯭⎯꯭꯭ꨄ](http://t.me/RAM_HACKER_RP)</b></blockquote>"
+stream_1 : "<b><blockquote>➥ 𝗝ąñı ση sᴛʀєᴧϻɪηɢ ⏤͟͞●</blockquote></b>\n\n<b><blockquote>❍ ᴛɪᴛʟє ➥</b> <a href={0}>{1}</a> \n<b>❍ ᴛɪϻє ➥</b> {2} ϻɪηυᴛєs \n<b>❍ ʙʏ ➥</b> {3}<b></blockquote>\n<b><blockquote>❤️‍🔥 ϻᴧᴅє ʙʏ➛ [𓆰꯭꯭♔꯭꯭𝐕ɪ֟፝‌꯭ᴘ꯭ 𝗝꯭ᴀ꯭፝֟͠ɴ꯭ɪ꯭꯭](http://t.me/RAM_HACKER_RP)</b></blockquote>"
 stream_2 : "<b><blockquote>➥ 𝗝ąñı ση sᴛʀєᴧϻɪηɢ ⏤͟͞●</blockquote></b>\n\n<b><blockquote>❍ sᴛʀєᴧϻ ᴛʏᴘє ➥</b> ʟɪᴠєsᴛʀєᴧϻ [ υʀʟ ]\n<b>❍ ʙʏ ➥</b> {0}</blockquote>"
 
 
@@ -367,7 +367,7 @@ C_B_H_14 : "Dᴇʟᴇᴛɪɴɢ ᴀʟʟ ᴄʟᴏɴᴇᴅ ʙᴏᴛs..."
 C_B_H_15 : "Aʟʟ ᴄʟᴏɴᴇᴅ ʙᴏᴛs ʜᴀᴠᴇ ʙᴇᴇɴ ᴅᴇʟᴇᴛᴇᴅ sᴜᴄᴄᴇssғᴜʟʟʏ."
 C_B_H_16 : "Yᴏᴜ ʜᴀᴠᴇɴ'ᴛ ᴄʟᴏɴᴇᴅ ᴀɴʏ ʙᴏᴛs ʏᴇᴛ."
 
-c_start_2 : "**✦ ʜᴇʏ, {0}**\n**✦ ɪ'ᴍ {1},**\n\n**● ᴀ ᴄʟᴏɴᴇᴅ ʙᴏᴛ ᴏғ [˹ᴊ𐓘ɴɪ ✘ ᴧꜱꜱɪꜱᴛᴧɴᴛ˼♪ [ᖇ♡ᑭ]]({3}) !!**\n**✦ ɪғ ʏᴏᴜ ᴡᴀɴᴛ ᴍᴀᴋᴇ ʏᴏᴜʀ ᴏᴡɴ ʙᴏᴛ, ᴠɪsɪᴛ [˹ᴊ𐓘ɴɪ ✘ ᴧꜱꜱɪꜱᴛᴧɴᴛ˼♪ [ᖇ♡ᑭ]]({5}) ᴀɴᴅ ᴛʏᴘᴇ /clone ᴄᴏᴍᴍᴀɴᴅ !!**\n\n**๏ ᴛᴀᴘ ᴛᴏ ʜᴇʟᴩ ᴀɴᴅ ᴄʜᴇᴀᴋ ᴍʏ ᴄᴏᴍᴍᴀɴᴅs.**\n**⚘ ᴍᴏʀᴇ ᴅᴇᴛᴀɪʟs ᴅᴍ - [𓆰꯭꯭♔꯭꯭𝐕ɪ֟፝‌꯭ᴘ꯭ 𝗝꯭ᴀ꯭፝֟͠ɴ꯭ɪ꯭꯭⎯꯭꯭ꨄ](http://t.me/RAM_HACKER_RP) !!**"
+c_start_2 : "**✦ ʜᴇʏ, {0}**\n**✦ ɪ'ᴍ {1},**\n\n**● ᴀ ᴄʟᴏɴᴇᴅ ʙᴏᴛ ᴏғ [˹ᴊ𐓘ɴɪ ✘ ᴧꜱꜱɪꜱᴛᴧɴᴛ˼♪ [ᖇ♡ᑭ]]({3}) !!**\n**✦ ɪғ ʏᴏᴜ ᴡᴀɴᴛ ᴍᴀᴋᴇ ʏᴏᴜʀ ᴏᴡɴ ʙᴏᴛ, ᴠɪsɪᴛ [˹ᴊ𐓘ɴɪ ✘ ᴧꜱꜱɪꜱᴛᴧɴᴛ˼♪ [ᖇ♡ᑭ]]({5}) ᴀɴᴅ ᴛʏᴘᴇ /clone ᴄᴏᴍᴍᴀɴᴅ !!**\n\n**๏ ᴛᴀᴘ ᴛᴏ ʜᴇʟᴩ ᴀɴᴅ ᴄʜᴇᴀᴋ ᴍʏ ᴄᴏᴍᴍᴀɴᴅs.**\n**⚘ ᴍᴏʀᴇ ᴅᴇᴛᴀɪʟs ᴅᴍ - [𓆰꯭꯭♔꯭꯭𝐕ɪ֟፝‌꯭ᴘ꯭ 𝗝꯭ᴀ꯭፝֟͠ɴ꯭ɪ꯭꯭](http://t.me/RAM_HACKER_RP) !!**"
 
 c_brod_1 : "» Yᴏᴜʀ ʙᴏᴛ ɴᴇᴇᴅs ᴀ ᴘʀᴇᴍɪᴜᴍ sᴜʙsᴄʀɪᴘᴛɪᴏɴ ᴛᴏ ᴜsᴇ `/broadcast`\n\n Jᴏɪɴ [Jani Music]({0}) ᴏʀ DM @RAM_HACKER_RP ғᴏʀ ᴍᴏʀᴇ ᴅᴇᴛᴀɪʟs ᴀɴᴅ ɢᴇᴛ sᴛᴀʀᴛᴇᴅ !"
 
